--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,13 @@
 systemProp.org.gradle.internal.plugins.portal.url.override=https://repo.maven.apache.org/maven2/
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+#mappings
+
+parchment_version =  1.19.2:2022.08.10
+parchment_enabled = false
+librarian_version = 1.+
+
+#minecraft stuff
+mc_update_version = 1.19.2
+minecraft_version = 1.19.2
